force-app/main/default/objects/Event__c/validationRules/Event_End_Date_Must_be_1_day_ahead.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_End_Date_Must_be_1_day_ahead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT ISBLANK(End_Date_Time__c),
End_Date_Time__c&lt;= Start_Date_Time__c + 1
)</errorConditionFormula>
    <errorMessage>Event End Date/Time must be 1 day ahead from Event Start Date/Time</errorMessage>
</ValidationRule>