force-app/main/default/objects/Event__c/validationRules/Event_Type_In_Person_Select_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_In_Person_Select_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT ISPICKVAL(Event_Type__c,&apos;Virtual&apos;) ,
 ISBLANK(Location__c) 
)</errorConditionFormula>
    <errorMessage>Event location should be  provided for In-Person event</errorMessage>
</ValidationRule>