force-app/main/default/objects/Event__c/validationRules/If_Recurring_is_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Recurring_is_checked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Recurring__c,
 ISBLANK(TEXT(Frequency__c))
)</errorConditionFormula>
    <errorMessage>You must need to select the frequency if recurring is checked</errorMessage>
</ValidationRule>