force-app/main/default/objects/Event__c/validationRules/If_Recurring_is_not_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Recurring_is_not_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 Recurring__c = false,
 NOT ISBLANK(TEXT( Frequency__c ))
)</errorConditionFormula>
    <errorMessage>You can not select the frequency if recurring is not selected.</errorMessage>
</ValidationRule>