force-app/main/default/objects/Event__c/validationRules/If_Virtual_is_Selected_For_Event_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Virtual_is_Selected_For_Event_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Event_Type__c,&apos;Virtual&apos;),
 NOT ISBLANK( Location__c )
)</errorConditionFormula>
    <errorMessage>You can not select a location for the event type virtual.</errorMessage>
</ValidationRule>